cn/snowskystudio/newgame/test/error/NetworkConnectionSendDataFailed.py
from cn.snowskystudio.newgame.test.error.BaseError import BaseError


class NetworkConnectionSendDataFailed(BaseError):
    TYPE = "NetworkConnectionSendDataFailed"